--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,13 @@
     <meta charset="utf-8" />
     <meta http-equiv="Content-language" content="cs">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>React App</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="./icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./icons/favicon-16x16.png">
+    <link rel="manifest" href="./icons/site.webmanifest">
+    <link rel="icon" href="./icons/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./icons/favicon.ico" type="image/x-icon">
+    <title>ITaborsky.cz</title>
   </head>
   <body>
     <div id="root"></div>
